sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:76: error: not found: value nouvPos
    nouvPos = getTrouPosition();
    ^SelectBaseball:92: error: not found: value posEchange
    deplace(mod(currBase-1, nbBases), posEchange);
                                      ^SelectBaseball:100: error: not found: value posEchange
  deplace(currBase, posEchange);
                    ^